# platypus

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  README.md  main.cpp
